# coding-exercise

./: .gitignore  CMakeLists.txt  README.md  discussion.txt
cmake/: CppCheck.cmake
docs/: Doxyfile
docs/html/: README_8md.html  aliases_8h.html  aliases_8h_source.html  bit__pattern_8cpp.html  bit__pattern_8h.html  bit__pattern_8h_source.html  checksum_8cpp.html  checksum_8h.html  checksum_8h_source.html  constants_8h.html  constants_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  namespaceexercise.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  read__input_8cpp.html  read__input_8h.html  read__input_8h_source.html  write__png__images_8cpp.html  write__png__images_8h.html  write__png__images_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js
include/: aliases.h  bit_pattern.h  checksum.h  constants.h  read_input.h  write_png_images.h
src/: CMakeLists.txt  bit_pattern.cpp  checksum.cpp  main.cpp  read_input.cpp  write_png_images.cpp
tests/: CMakeLists.txt  bit_pattern_test.cpp  checksum_test.cpp  read_input_test.cpp  write_png_images_test.cpp
